tests/paczka1/small_fuzzy/57384516.err
Error in line 1: PT9P1qNjD S674 81,9
Error in line 7: S674 A161 64,8
Error in line 13: S674 A990 14,3
